--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+{% load static %}
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -7,6 +7,18 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+      <!-- custom css & js-->
+     <link rel="stylesheet" type="text/css" href="{% static 'css/demo.css' %}">
+
+      <script src="{% static 'js/jquery.js' %}"></script>
+      <script src="{% static 'js/jquery.ui.widget.js' %}"></script>
+      <!-- The Iframe Transport is required for browsers without support for XHR file uploads -->
+      <script src="{% static 'js/jquery.iframe-transport.js' %}"></script>
+      <!-- The basic File Upload plugin -->
+      <script src="{% static 'js/jquery.fileupload.js' %}"></script>
+      <!-- Calculate md5 -->
+      <script src="{% static 'js/spark-md5.js' %}"></script>
 
     <title>Catalyst Count</title>
   </head>
