--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -1,12 +1,12 @@
 <ul class="nav fs-3 text nav-pills nav-fill" style="background-color: #e3f2fd;">
     <li class="nav-item active">
-        <a class="nav-link" aria-current="page" href="{% url 'upload-data' %}">Upload Data</a>
+        <a class="nav-link" aria-current="page" href="{% url 'chunked-upload-start' %}">Upload Data</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="{% url 'query-data' %}">Query Builder</a>
+        <a class="nav-link" aria-current="page" href="">Query Builder</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="">Users</a>
+        <a class="nav-link" aria-current="page" href="{% url 'get-all-users-and-status' %}">Users</a>
     </li>
     <li class="nav-item">
         {% if request.user.is_authenticated %}
