--- a/base/templates/upload_file.html
+++ b/base/templates/upload_file.html
@@ -1,17 +1,100 @@
 {% extends 'base.html' %}
 {% block bodycontent %}
+
 {% if request.user.is_authenticated %}
-            {% include 'navbar.html' %}
+{% include 'navbar.html' %}
 {% endif %}
-<div class="container">
-    <h1>Upload data File</h1>
-      <div class="fs-4 text">
-        <form method="post" action="" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <br>
-            <input type="button" value="submit" class="btn btn-success">
-        </form>
+  <h1 class="title"> Upload File </h1>
+  {% csrf_token %}
+  <input id="chunked_upload" type="file" name="the_file" onchange="displayFileName()">
+
+    <br><br>
+    <div class="progress">
+  <div id="progress-bar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
   </div>
 </div>
+
+  <div id="messages"></div>
+
+  <script type="text/javascript">
+
+    var md5 = "",
+        csrf = $("input[name='csrfmiddlewaretoken']")[0].value,
+        form_data = [{"name": "csrfmiddlewaretoken", "value": csrf}];
+    function calculate_md5(file, chunk_size) {
+      var slice = File.prototype.slice || File.prototype.mozSlice || File.prototype.webkitSlice,
+          chunks = chunks = Math.ceil(file.size / chunk_size),
+          current_chunk = 0,
+          spark = new SparkMD5.ArrayBuffer();
+      function onload(e) {
+        spark.append(e.target.result);  // append chunk
+        current_chunk++;
+        if (current_chunk < chunks) {
+          read_next_chunk();
+        } else {
+          md5 = spark.end();
+        }
+      };
+      function read_next_chunk() {
+        var reader = new FileReader();
+        reader.onload = onload;
+        var start = current_chunk * chunk_size,
+            end = Math.min(start + chunk_size, file.size);
+        reader.readAsArrayBuffer(slice.call(file, start, end));
+      };
+      read_next_chunk();
+    }
+    $("#chunked_upload").fileupload({
+      url: "{% url 'chunked-upload' %}",
+      dataType: "json",
+      maxChunkSize: 100000, // Chunks of 100 kB
+      formData: form_data,
+      add: function(e, data) { // Called before starting upload
+        $("#messages").empty();
+        // If this is the second file you're uploading we need to remove the
+        // old upload_id and just keep the csrftoken (which is always first).
+        form_data.splice(1);
+        calculate_md5(data.files[0], 100000);  // Again, chunks of 100 kB
+        data.submit();
+      },
+      chunkdone: function (e, data) { // Called after uploading each chunk
+        if (form_data.length < 2) {
+          form_data.push(
+            {"name": "upload_id", "value": data.result.upload_id}
+          );
+        }
+        //$("#messages").append($('<p>').text(JSON.stringify(data.result)));
+        //var progress = parseInt(data.loaded / data.total * 100.0, 10);
+        //$("#progress").text(Array(progress).join("=") + "> " + progress + "%");
+
+        var progress = parseInt(data.loaded / data.total * 100.0, 10);
+        $("#progress-bar").css("width", progress + "%").text(progress + "%");
+
+      },
+      done: function (e, data) { // Called when the file has completely uploaded
+        $.ajax({
+          type: "POST",
+          url: "{% url 'chunked-upload-complete' %}",
+          data: {
+            csrfmiddlewaretoken: csrf,
+            upload_id: data.result.upload_id,
+            md5: md5
+          },
+          dataType: "json",
+          success: function(data) {
+            $("#messages").append($('<p>').text(JSON.stringify(data)));
+            var progress = parseInt(100);
+            $("#progress-bar").css("width", progress + "%").text(progress + "%");
+          }
+        });
+      },
+    });
+
+    function displayFileName() {
+  const input = document.getElementById('chunked_upload');
+  const fileName = input.files[0].name;
+  document.getElementById('fileName').innerText = "Selected file: " + fileName;
+}
+  </script>
+
 {% endblock bodycontent%}
