--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -3,7 +3,7 @@
         <a class="nav-link" aria-current="page" href="{% url 'chunked-upload-start' %}">Upload Data</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="">Query Builder</a>
+        <a class="nav-link" aria-current="page" href="{% url 'query-builder' %}">Query Builder</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" aria-current="page" href="{% url 'get-all-users-and-status' %}">Users</a>
